.env 파일 문제 원복