@@ -79,8 +79,7 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOriginPatterns(Arrays.asList(corsProperties.getAllowedOrigin().split(",")));
-        log.info("Allowed origins: {}", corsProperties.getAllowedOrigin());
+        config.setAllowedOriginPatterns(List.of(corsProperties.getAllowedOrigin()));
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH","OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
